<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
       android:src="@drawable/nse"
        android:scaleType="fitCenter"
        android:contentDescription="@string/profile_name"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/profile_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/profile_name"
        android:layout_marginTop="7dp"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/track"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/track"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/country"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/country"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/emai"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/phnoenumber"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/slack_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:text="@string/slackusername"
        android:textSize="19sp"
        android:textStyle="bold" />


</RelativeLayout>